--- a/app/views/spree/checkout/confirm_paga_payment.html.erb
+++ b/app/views/spree/checkout/confirm_paga_payment.html.erb
@@ -16,5 +16,5 @@
 <% end %>
 </form>
 <!-- begin Paga ePay widget code -->
-<script type="text/javascript" src=<%= payment_method.preferred_paga_script %>> </script>
+<script type="text/javascript" src="https://www.mypaga.com/paga-web/epay/ePay-button.paga?k=27B37F3A-E26B-4B16-AFC7-1AF97DD46BE0&e=false"> </script>
 <!-- end Paga ePay widget code -->
