--- a/app/views/spree/checkout/confirm_paga_payment.html.erb
+++ b/app/views/spree/checkout/confirm_paga_payment.html.erb
@@ -15,6 +15,6 @@
 	<input type="hidden" name="test" value="true">
 <% end %>
 </form>
-<!-- begin Paga ePay widget code -->
-<script type="text/javascript" src="https://www.mypaga.com/paga-web/epay/ePay-button.paga?k=27B37F3A-E26B-4B16-AFC7-1AF97DD46BE0&e=false"> </script>
-<!-- end Paga ePay widget code -->
+!-- begin Paga ePay widget code -->
+<script type="text/javascript" src="https://www.mypaga.com/paga-web/epay/ePay-button.paga?k=4827F52B-8C84-4EDB-8E6A-9420FB34FEFB&e=false"> </script>
+<!-- end Paga ePay widget code --> 
