--- a/app/views/spree/checkout/confirm_paga_payment.html.erb
+++ b/app/views/spree/checkout/confirm_paga_payment.html.erb
@@ -16,5 +16,5 @@
 <% end %>
 </form>
 <!-- begin Paga ePay widget code -->
-<script type="text/javascript" src="https://www.mypaga.com/paga-web/epay/ePay-button.paga?k=4827F52B-8C84-4EDB-8E6A-9420FB34FEFB&e=false"> </script>
-<!-- end Paga ePay widget code --> 
+<script type="text/javascript" src=<%= payment_method.preferred_paga_script %>> </script>
+<!-- end Paga ePay widget code -->
